<resources>
    <string name="app_name">打印神器</string>
    <string name="action_settings">Settings</string>
    <string name="user_group">用户</string>
    <string name="title_notifications">Notifications</string>
    <string name="home">首页</string>
    <string name="printer">打印机</string>
    <string name="print">打印</string>
    <string name="print_job_exists">打印任务已经存在</string>
    <string name="width">宽度</string>
    <string name="height">高度</string>
    <string name="size_unit">单位：mm</string>

    <string name="system">系统</string>
    <string name="custom">自定义</string>
    <string name="size">尺寸</string>

    <string name="no_data">暂无数据</string>
    <string name="search_user">搜索用户</string>
    <string name="add_user">添加用户</string>
    <string name="full_name">姓名</string>
    <string name="men">男</string>
    <string name="women">女</string>
    <string name="save">保存</string>
    <string name="sex">性别</string>
    <string name="mobile_no">手机号码</string>
    <string name="address">地址</string>
    <string name="postcode">邮编</string>
    <string name="please_enter_full_name">请输入姓名</string>
    <string name="please_enter_mobile_no">请输入手机号码</string>
    <string name="please_enter_address">请输入地址</string>
    <string name="please_enter_postcode">请输入邮编</string>
    <string name="save_success">保存成功</string>
    <string name="save_failure">保存失败</string>
    <string name="delete_user">删除用户</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_failure">删除失败</string>
    <string name="landscape">横向</string>
    <string name="portrait">纵向</string>
    <string name="media_size_remark">1英寸(in)= 2.54厘米(cm)</string>
    <string name="please_select_print_size">请选择打印尺寸</string>

</resources>
